--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "framer-motion": "^12.23.7",
+    "gsap": "^3.13.0",
+    "lucide-react": "^0.545.0",
     "motion": "^12.23.7",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
